TFP-5621 fjern innsending, delay prosessering (#2657)
* TFP-5621 fjern innsending, delay prosessering

* fjerne ubrukte forsendelser

* Bevare eksternreferanseid

* mindre delay

* Fjerne journalpost-tabell

* Ta med oppgavestatus og flyttete oppgaver

* Skipp oppgaver avsluttet i gosys

* Ta med opprettetdato